# TailGator

./: README.md
CAN_Demo/CAN_Receive/: Cargo.toml
CAN_Demo/CAN_Receive/src/: main.rs  usb_manager.rs
CAN_Demo/CAN_Transmit/: Cargo.toml  build.rs
CAN_Demo/CAN_Transmit/examples/: can2040_demo.rs
Documents/Alpha Build Testing/: .gitignore  graph_data.py  ovp-data-2024.02.25_16.23.02.csv  ovp.py  ovp_tta.py  pyproject.toml  rpp-data-2024.02.25_16.11.30.csv  rpp.py
Documents/Alpha Build Testing/scpi_driver/: __init__.py
Documents/Alpha Build Testing/scpi_driver/equipment/: mso7104a.py  odp3122.py  scpi_equipment.py
Documents/Alpha Build Testing/scpi_driver/equipment/testing/: mock_scpi_test.py
Documents/Images/: TermBoardCAN.drawio
Documents/Research/: BJT.xopp
PCB/: .gitignore  TGIS.DsnWrk
PCB/3D Models/Amphenol/: 10144517-081802LF.STEP  10144518-081802LF.STEP  10144518-083802LF.STEP
PCB/3D Models/Amphenol/Pegs Removed/: 10144517-061x0xxx.step  10144517-081802LF NoPeg.step  10144518-081802LF NoPeg.step  10144518-082802LF NoPeg.step  10144518-083802LF NoPeg.step
PCB/3D Models/SamTec/: FTSH-110-01-L-DV-007-K.stp
PCB/3D Models/TE Connectivity/: c-1877285-2-c-3d.stp
PCB/BOM/: BOM V2 Combined.xlsx  TGIS Breakout.xlsx  TGIS Main.xlsx  TGIS USB to CAN.xlsx
PCB/TailGator Interconnect System/: TGIS Example.MbsDoc  TGIS.OutJob  TailGator Interconnect System.PrjMbd  TailGator Interconnect System.PrjMbdStructure
PCB/TailGator Interconnect System/Main PCB/TIS Main PCB/: MainPCB 11-3-2023 11-52-19 PM.WAS  MainPCB.PcbDoc  MainPCB.SchDoc  TIS Main PCB.PrjPcb
PCB/TailGator Interconnect System/Main PCB/TIS Main PCB/__Previews/: MainPCB.SchDocPreview
PCB/TailGator Interconnect System/TGIS Breakout/TGIS Breakout/: Breakout.PcbDoc  Breakout.REP  Breakout.SchDoc  Constraints.xml  TGIS Breakout.BomDoc  TGIS Breakout.PrjPcb  TGIS Breakout.PrjPcbStructure  TGIS Breakout.html  TGIS.OutJob
PCB/TailGator Interconnect System/TGIS Breakout/TGIS Breakout/Project Outputs for TGIS Breakout/: Design Rule Check - Breakout.drc  (+1 more)
PCB/TailGator Interconnect System/TGIS CAN Termination/: Board.PcbDoc  Board.REP  Board.SchDoc  TGIS CAN Termination.BomDoc  TGIS CAN Termination.PrjPcb
PCB/TailGator Interconnect System/TGIS CAN Termination/Project Outputs for TGIS CAN Termination/: Design Rule Check - Board.drc  Design Rule Check - Board.html  TGIS CAN Termination.xlsx
PCB/TailGator Interconnect System/TGIS CAN Termination/__Previews/: Board.SchDocPreview
PCB/TailGator Interconnect System/TGIS Main/: Connectors.SchDoc  MainPCB.PcbDoc  MainPCB.REP  MainPCB.SchDoc  Microcontroller.SchDoc  Power.SchDoc  TGIS Main.BomDoc  TGIS Main.PrjPcb  TGIS Main.PrjPcbStructure  TGIS Power Distribution Board.PrjPcb  TGIS_Microcontrollers.PcbLib  Transcievers.SchDoc
PCB/TailGator Interconnect System/TGIS Main/Project Outputs for TGIS Main/: Design Rule Check - MainPCB.drc  Design Rule Check - MainPCB.html  Move Component(s) Origin To Grid - MainPCB.html  Move Component(s) Origin To Grid - MainPCB.txt
PCB/TailGator Interconnect System/TGIS Main/Project Outputs for TGIS Power Distribution Board/: Design Rule Check - MainPCB.drc  Design Rule Check - MainPCB.html  TGIS Power Distribution Board.xlsx
PCB/TailGator Interconnect System/TGIS Main/XJTAG/: Board-TGIS Main.xje  Board-TIS Main PCB.xje  Globals1.xje  TGIS Main.net  TGIS Main.xjd  TGIS Main.xje  TIS Main PCB.net  TIS Main PCB.settings  TIS Main PCB.xjd  TIS Main PCB.xje
PCB/TailGator Interconnect System/TGIS Main/__Previews/: Connectors.SchDocPreview  MainPCB.SchDocPreview  Microcontroller.SchDocPreview  Power.SchDocPreview  Transcievers.SchDocPreview
PCB/TailGator Interconnect System/TGIS Protoboard/: Protoboard.PcbDoc  Protoboard.SchDoc  TGIS Protoboard.PrjPcb  TGIS Protoboard.PrjPcbStructure
PCB/TailGator Interconnect System/TGIS Protoboard/Project Outputs for TGIS Protoboard/: Design Rule Check - Protoboard.drc  Design Rule Check - Protoboard.html  Move Component(s) Origin To Grid - Protoboard.html  Move Component(s) Origin To Grid - Protoboard.txt
PCB/TailGator Interconnect System/TGIS Protoboard/__Previews/: Protoboard.SchDocPreview
PCB/TailGator Interconnect System/TGIS System Status/: Components.SchDoc  Connectors.SchDoc  Microcontroller.SchDoc  Power.SchDoc  SystemStatus.REP  TGIS System Status.BomDoc  TGIS System Status.PrjPcb  TGIS System Status.PrjPcbStructure
PCB/TailGator Interconnect System/TGIS System Status/Project Outputs for TGIS System Status/: Design Rule Check - SystemStatus.drc  Design Rule Check - SystemStatus.html  TGIS System Status.xlsx
PCB/TailGator Interconnect System/TGIS System Status/Project Outputs for TGIS USB to CAN/: Design Rule Check - USBtoCAN.drc  Design Rule Check - USBtoCAN.html
PCB/TailGator Interconnect System/TGIS System Status/__Previews/: Components.SchDocPreview  Connectors.SchDocPreview  IO.SchDocPreview  Microcontroller.SchDocPreview  Power.SchDocPreview
PCB/TailGator Interconnect System/TGIS USB to CAN/TGIS USB to CAN/: Connectors.SchDoc  Microcontroller.SchDoc  Power.SchDoc  TGIS USB to CAN.BomDoc  TGIS USB to CAN.PrjPcb  TGIS USB to CAN.PrjPcbStructure  Transceivers.SchDoc  USBtoCAN.REP
RTIC_App/: Cargo.toml
RTIC_App/.cargo/: config
RTIC_App/src/: main.rs  usb_manager.rs
Simulation/Main PCB/: .gitignore  Zener_DiodesInc.lib  st_standard_sensitive_scr.lib
Simulation/Main PCB/3V3 Protection Circuits/: 3V3_Protection.asc
Simulation/Main PCB/5V Protection Circuits/: 5V_Protection.asc  5V_Protection.net  BZT52C3V9.spice.txt  BZT52C4V7.spice.txt  BZT52C5V6.spice.txt  Draft1.asc  MMSZ5230BS.spice.txt  MMSZ5232B.spice.txt  OVP.asc  OptiMOS_30V.lib  RPP.asc
USB2CAN_App/: CMakeLists.txt  usb2can.c
blinky/: .ccsproject  .cproject  .project  blinky.c
blinky/Debug/: blinky.d  blinky.out  blinky_ccs.map  blinky_linkInfo.xml  ccsObjs.opt  makefile  startup_ccs.d  subdir_rules.mk  subdir_vars.mk  uartstdio.d
hw-demo/: Cargo.toml
hw-demo/src/: main.rs  usb_manager.rs
sd-card-demo/: Cargo.toml
sd-card-demo/examples/: adafruit_feather_spi_sd_card.rs
(+210 files in other folders)
