[package]
name = "feather-rp2040-rtic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

adafruit-feather-rp2040 = "0.4.0"
embedded-hal            = "0.2.7"
panic-halt              = "0.2.0"
cortex-m                = "0.7.2"
cortex-m-rtic           = "1.1.3"
systick-monotonic       = "1.0.0"
#rp2040-monotonic        = "1.1.0"
fugit                   = "0.3.6"

usb-device              = "0.2.9"
usbd-serial             = "0.1.1"

#sh1106                  = "0.4.0"
sh1107                  = { git = "https://github.com/shulltronics/sh1107.git", branch = "embedded-graphics-fix" }
embedded-graphics       = "0.7.1"

ws2812-pio              = "0.4.0"
smart-leds              = "0.3.0"

# IMU requirements
lis3dh                  = "0.4.2"
accelerometer           = "0.12.0"
