[package]
name = "feather-rp2040-rtic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

adafruit-feather-rp2040 = "0.7.0"
rp2040-hal              = { version = "0.9.0", features = ["rt", "critical-section-impl", "eh1_0_alpha", "defmt"] }
embedded-hal            = "1.0.0"
embedded-hal-bus        = "0.1.0"

panic-halt              = "0.2.0"
cortex-m                = "0.7.2"
cortex-m-rtic           = "1.1.3"
systick-monotonic       = "1.0.0"
fugit                   = "0.3.7"

# Debug
defmt                   = "0.3.5"
defmt-rtt               = "0.4.0"

# SD card reader
embedded-sdmmc          = "0.7.0"

# OLED display
sh1107                  = { git = "https://github.com/shulltronics/sh1107.git", branch = "embedded-graphics-fix" }
embedded-graphics       = "0.7.1"

# IMU
lis3dh                  = "0.4.2"
accelerometer           = "0.12.0"
