[package]
name = "feather-rp2040-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt              = "0.2.0"
cortex-m                = "0.7.6"
cortex-m-rt             = "0.7.1"
embedded-time           = "0.12.1"
embedded-hal            = "0.2.7"
adafruit-feather-rp2040 = "0.4.0"

ws2812-pio              = "0.4.0"
fugit                   = "0.3.5"
smart-leds              = "0.3.0"
nb                      = "1.0.0"

lis3dh                  = "0.4.2"
accelerometer           = "0.12.0"
usbd-serial             = "0.1.1"
usb-device              = "0.2.9"

critical-section        = "1.1.2"

rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
ssd1331 = "0.3.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = { version = "^ 0.3", optional = true }
