[package]
name = "can2040"
version = "0.1.1"
edition = "2021"
authors = ["Zephyr Guo <zephyr@atomi.ai>"]
license = "GPL-3.0"
description = "A Can2040 port for Rust."
repository = "https://github.com/atomi-ai/can2040-rust"
categories = ["can"]
keywords = ["can", "canopen"]

[dependencies]

rp2040-boot2            = "0.3.0"
critical-section        = "1.1.2"

alloc-cortex-m = "0.4"
cortex-m                = "0.7.2"
cortex-m-rtic           = "1.1.3"
cortex-m-rt = "0.7"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-can = "0.4.1"
embedded-hal            = { version = "1.0.0", features = ["defmt-03"] } # { version = "0.2.5", features = ["unproven"] }
embedded-hal-bus        = { version = "0.1.0", features = ["defmt-03"] }
libc = "0.2"

################ todo can we use panic-probe instead? ################
# panic-probe = "0.3"
panic-halt              = "0.2.0"
nb = "1.1"

########## fixme ##############
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl", "eh1_0_alpha", "defmt"] }
# rp2040-hal = { git = "https://github.com/shulltronics/rp-hal.git", features = ["rt", "critical-section-impl", "defmt"] }

rp-pico = "0.8"

[build-dependencies]
bindgen = "0.68"
